--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,7 +14,7 @@
           \|
           = link_to 'Users', admin_users_path
           \|
-        = link_to 'Sign Out', sign_out_path, method: :delete
+        = link_to 'Sign Out', sign_out_path, method: :delete, turboboost: true
         %hr
 
 
