--- a/app/views/trips/index.html.haml
+++ b/app/views/trips/index.html.haml
@@ -20,7 +20,7 @@
         %td= trip.comment
         %td= link_to 'Show', trip
         %td= link_to 'Edit', edit_trip_path(trip)
-        %td= link_to 'Destroy', trip, :method => :delete, :data => { :confirm => 'Are you sure?' }
+        %td= link_to 'Destroy', trip, :method => :delete, :data => { :confirm => 'Are you sure?' }, turboboost: true
 
 %br
 
