--- a/app/views/trips/index.html.haml
+++ b/app/views/trips/index.html.haml
@@ -6,6 +6,7 @@
       %th Destination
       %th Start date
       %th End date
+      %th Starts in
       %th Comment
       %th
       %th
@@ -13,11 +14,13 @@
 
   %tbody
     - @trips.each do |trip|
+      - starts_in = (trip.start_date - Time.now.to_date).to_i
       %tr
         %td= trip.destination
         %td= trip.start_date
         %td= trip.end_date
-        %td= trip.comment
+        %td= starts_in >= 0 ? "#{starts_in}d" : ''
+        %td= truncate(trip.comment, length: 15)
         %td= link_to 'Show', trip
         %td= link_to 'Edit', edit_trip_path(trip)
         %td= link_to 'Destroy', trip, :method => :delete, :data => { :confirm => 'Are you sure?' }, turboboost: true
