--- a/app/views/trips/index.html.haml
+++ b/app/views/trips/index.html.haml
@@ -1,6 +1,11 @@
 %h1 Listing trips
 
-%table
+- if @trips.size > 2
+  = form_tag search_trips_path, id: 'trips-search' do
+    = text_field_tag :q, '', placeholder: 'Search'
+    = button_tag :Go
+
+%table#trips-list
   %thead
     %tr
       %th Destination
@@ -11,20 +16,11 @@
       %th
       %th
       %th
-
   %tbody
-    - @trips.each do |trip|
-      - starts_in = (trip.start_date - Time.now.to_date).to_i
-      %tr
-        %td= trip.destination
-        %td= trip.start_date
-        %td= trip.end_date
-        %td= starts_in >= 0 ? "#{starts_in}d" : ''
-        %td= truncate(trip.comment, length: 15)
-        %td= link_to 'Show', trip
-        %td= link_to 'Edit', edit_trip_path(trip)
-        %td= link_to 'Destroy', trip, :method => :delete, :data => { :confirm => 'Are you sure?' }, turboboost: true
+    = render partial: 'list', locals: {trips: @trips}
 
 %br
 
 = link_to 'New Trip', new_trip_path
+
+= javascript_include_tag 'search'
