no trips message

--- a/app/views/trips/index.html.haml
+++ b/app/views/trips/index.html.haml
@@ -17,7 +17,7 @@
       %th
       %th
   %tbody
-    = render partial: 'list', locals: {trips: @trips}
+    = render partial: 'list', locals: {trips: @trips, empty_message: 'No trips yet'}
 
 %br
 
