--- a/app/views/trips/_list.html.haml
+++ b/app/views/trips/_list.html.haml
@@ -9,3 +9,7 @@
     %td= link_to 'Show', trip
     %td= link_to 'Edit', edit_trip_path(trip)
     %td= link_to 'Destroy', trip, :method => :delete, :data => { :confirm => 'Are you sure?' }, turboboost: true
+
+- if trips.empty?
+  %tr
+    %td{colspan: 8}= empty_message
