--- a/app/views/trips/index.html.haml
+++ b/app/views/trips/index.html.haml
@@ -22,5 +22,7 @@
 %br
 
 = link_to 'New Trip', new_trip_path
+\|
+= link_to 'Travel Plan for Next Month', travelplan_trips_path, target: :_blank
 
 = javascript_include_tag 'search'
