--- a/app/views/trips/index.html.haml
+++ b/app/views/trips/index.html.haml
@@ -1,7 +1,7 @@
 %h1 Listing trips
 
 - if @trips.size > 2
-  = form_tag search_trips_path, id: 'trips-search' do
+  = form_tag search_trips_path, method: :get, authenticity_token: false, id: 'trips-search' do
     = text_field_tag :q, '', placeholder: 'Search'
     = button_tag :Go
 
