--- a/app/views/passwords/create.html.haml
+++ b/app/views/passwords/create.html.haml
@@ -1,5 +1,5 @@
-.clearance.password-reset
-  %p= t(".description")
+%br
+%p= t(".description")
 
-  .other-links
-    = link_to t("sessions.new.title", sign_in_path
+.other-links
+  = link_to t("sessions.new.title"), sign_in_path
