--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,8 +1,8 @@
-.sign-up
-  %h2= t(".title")
-  = form_for @user, turboboost: true do |form|
-    = render partial: '/users/form', object: form
-    .submit-field
-      = form.submit
-    .other-links
-      = link_to t(".sign_in"), sign_in_path
+%h2= t(".title")
+
+.row
+  .col-sm-5
+    = render partial: '/users/form'
+
+%br
+= link_to t(".sign_in"), sign_in_path
