--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -1,7 +1,10 @@
 %h1 Editing user
 
-= render 'form'
+.row
+  .col-sm-5
+    = render 'form'
 
+%br
 = link_to 'Show', admin_user_path(@user)
 \|
 = link_to 'Back', admin_users_path
