--- a/app/views/admin/users/show.html.haml
+++ b/app/views/admin/users/show.html.haml
@@ -1,14 +1,22 @@
-%p#notice= notice
+- if notice
+  .alert.alert-info
+    = notice
 
 %p
-  %b Email:
+  %strong Email
+  %br
   = @user.email
+
 %p
-  %b Rank:
+  %strong Rank
+  %br
   = @user.rank
+
 %p
-  %b Registered:
+  %strong Registered
+  %br
   = @user.created_at.to_date
+
 
 = link_to 'Edit', edit_admin_user_path(@user)
 \|
