--- a/app/views/trips/_form.html.haml
+++ b/app/views/trips/_form.html.haml
@@ -1,22 +1,6 @@
-= form_for @trip, turboboost: true do |f|
-  - if @trip.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@trip.errors.count, "error")} prohibited this trip from being saved:"
-      %ul
-        - @trip.errors.full_messages.each do |msg|
-          %li= msg
-
-  .field
-    = f.label :destination
-    = f.text_field :destination
-  .field
-    = f.label :start_date
-    = f.date_select :start_date
-  .field
-    = f.label :end_date
-    = f.date_select :end_date
-  .field
-    = f.label :comment
-    = f.text_field :comment
-  .actions
-    = f.submit 'Save'
+= bootstrap_form_for @trip, turboboost: true do |f|
+  = f.text_field :destination
+  = f.date_select :start_date
+  = f.date_select :end_date
+  = f.text_area :comment
+  = f.submit 'Save', class: 'btn btn-primary'
