--- a/app/views/trips/edit.html.haml
+++ b/app/views/trips/edit.html.haml
@@ -1,7 +1,10 @@
 %h1 Editing trip
 
-= render 'form'
+.row
+  .col-sm-5
+    = render 'form'
 
+%br
 = link_to 'Show', @trip
 \|
 = link_to 'Back', trips_path
